scrollbar bug fix

--- a/src/Components/Table/table.css
+++ b/src/Components/Table/table.css
@@ -1,6 +1,6 @@
 @media (max-width: 900px) {
     div.table{
-        overflow-x: auto;
+        
         display: block;
         width: 100% !important;
     }
